# Anime-Recommender-LLMOPS

./: Dockerfile  pyproject.toml
app/: app.py
chroma_db/79ffb6e1-43ea-4a36-a5c4-138e13df2add/: index_metadata.pickle
pipeline/: build_pipeline.py  pipeline.py
src/: prompt_template.py  recommender.py  vector_store.py
